# flask-node-log

./: .gitignore  Dockerfile.server  app.py  database.db  docker-compose.yaml.bak  docker-compose.yml  package-lock.json  populater_record.py  pyproject.toml  readme.md  sample.json
db/: create.sql  docker-compose.yml
json-server/: db.json  docker-compose.yml
json-server/json-server/: Dockerfile  db.json
kubernetes/: deploy.yaml  secret.yaml
project/: __init__.py
project/api/: __init__.py  models.py  nodes.py
server/: .dockerignore  Dockerfile  app.py  flask-node-log.yaml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
server/project/: __init__.py  config.py  database.db
server/project/api/: __init__.py  auth.py  models.py  nodes.py  reboot_client.py
server/project/static/css/: main.css
server/project/templates/: base.html  index.html  login.html  nodes.html
templates/: base.html  index.html  nodes.html
